# tensorflow-checkpoint-reader

./: .gitignore  CHANGELOG.md  README.md  build.sh  inspect_checkpoint.py  load.py  pyproject.toml  setup.py  setup_info.py
tensorflow_checkpoint_reader/: __init__.py  block_builder.py  bundle_reader.py  coding.py  core.py  env.py  env_time.py  errors.py  file_statistics.py  file_system.py  file_system_helper.py  io.py  iterator.py  load_library.py  misc.py  naming.py  numpy_util.py  path.py  platform.py  port.py  posix_file_system.py  py_checkpoint_reader.py  random.py  str_util.py  strings.py  table.py  table_builder.py  table_options.py  tensor.py  tensor_bundle.py  tensor_shape.py
tensorflow_checkpoint_reader/pb/: __init__.py
tensorflow_checkpoint_reader/pb/tensorflow/compiler/jit/: xla_activity_pb2.py
tensorflow_checkpoint_reader/pb/tensorflow/compiler/tf2xla/: host_compute_metadata_pb2.py  tf2xla_pb2.py
tensorflow_checkpoint_reader/pb/tensorflow/compiler/xla/: xla_data_pb2.py  xla_pb2.py
tensorflow_checkpoint_reader/pb/tensorflow/compiler/xrt/: xrt_pb2.py
tensorflow_checkpoint_reader/pb/tensorflow/core/data/: dataset_pb2.py
tensorflow_checkpoint_reader/pb/tensorflow/core/debug/: debug_service_pb2.py  debugger_event_metadata_pb2.py
tensorflow_checkpoint_reader/pb/tensorflow/core/example/: example_parser_configuration_pb2.py  example_pb2.py  feature_pb2.py
tensorflow_checkpoint_reader/pb/tensorflow/stream_executor/: dnn_pb2.py
tensorflow_checkpoint_reader/std/: __init__.py  thread.py
tensorflow_checkpoint_reader/tensorflow/python/: _pywrap_py_exception_registry.py
tensorflow_checkpoint_reader/tensorflow/python/eager/: context.py
tensorflow_checkpoint_reader/tensorflow/python/framework/: errors.py  errors_impl.py
tensorflow_checkpoint_reader/tensorflow/python/platform/: tf_logging.py
tensorflow_checkpoint_reader/tensorflow/python/training/: checkpoint_management.py  saver.py
tensorflow_checkpoint_reader/tensorflow/python/util/: compat.py  deprecation.py  tf_contextlib.py  tf_export.py  tf_inspect.py
tests/: tensorflow_checkpoint_reader_test.py
(+148 files in other folders)
