[tool.poetry]
name = "tensorflow-checkpoint-reader"
version = "0.1.3"
homepage = "https://github.com/shawwn/tensorflow-checkpoint-reader"
description = "Tensorflow's CheckpointReader in pure python"
authors = ["Shawn Presser"]
license = "MIT"
readme = "README.md"
packages = [{include = "tensorflow_checkpoint_reader"}]

[tool.poetry.dependencies]
python = "^3.6"
protobuf = "<3.19"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
python-semantic-release = "^7.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Shawn's Website" = "https://www.shawwn.com"
"Support me on Patreon" = "https://www.patreon.com/shawwn"
"@theshawwn on Twitter" = "https://www.twitter.com/theshawwn"
"sillysaurusx on Hacker News" = "https://news.ycombinator.com/threads?id=sillysaurusx"

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "main"
include_additional_files = "setup.py"
major_on_zero = false
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
